--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,7 +1,7 @@
 [FileDialog]
-history=file:///home/stilux/Videos, file:///home/stilux/Desktop
-lastVisited=file:///home/stilux/Desktop
-qtVersion=5.12.10
+history=file:///home/stilux/Videos, file:///home/stilux/Desktop, file:///home/stilux/Pictures/Screenshots
+lastVisited=file:///home/stilux/Pictures/Screenshots
+qtVersion=5.15.8
 shortcuts=file:, file:///home/stilux
 sidebarWidth=94
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xb2\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xe1\0\0\0\x1\0\0\0\0\0\0\0\x38\0\0\0\x1\0\0\0\0\0\0\0\x38\0\0\0\x1\0\0\0\0\0\0\0\x61\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
