Lsp Update Neovim

--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/stilux/Videos, file:///home/stilux/Desktop, file:///home/stilux/Pictures/Screenshots
-lastVisited=file:///home/stilux/Pictures/Screenshots
+history=file:///home/stilux/Videos, file:///home/stilux/Desktop, file:///home/stilux/Pictures/Screenshots, file:///home/stilux/Data/WorkSpace/KdenLive
+lastVisited=file:///home/stilux/Data/WorkSpace/KdenLive
 qtVersion=5.15.8
 shortcuts=file:, file:///home/stilux
 sidebarWidth=94
