--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,7 +17,7 @@ cursor_text_color #FFFFFF
 
 #Color scheme
 background #24283b
-background_opacity 0.8
+background_opacity 1
 dynamic_background_opacity yes
 
 color0 #665654
@@ -76,6 +76,22 @@ inactive_tab_background #21927c
 # inactive_tab_background #362b48
 inactive_tab_font_style normal
 
+# Remove default mappings
+map ctrl+shift+n discard_event
+map ctrl+shift+r discard_event
+map ctrl+shift+f6 discard_event 
+map ctrl+alt+a discard_event
+map ctrl+shift+delete discard_event
+map ctrl+shift+a>1 discard_event
+map ctrl+shift+a>d discard_event
+map ctrl+shift+a>m discard_event
+map ctrl+shift+a>l discard_event
+map ctrl+shift+u discard_event
+map ctrl+shift+f11 discard_event
+map ctrl+shift+f1 discard_event
+map ctrl+shift+l discard_event
+
+
 
 # Mapping
 # Change opacity
@@ -108,4 +124,6 @@ map ctrl+tab next_tab
 
 map ctrl+shift+tab previous_tab
 
+# Reload kitty.conf
+map alt+f5 load_config_file
 
