--- a/.config/i3/config
+++ b/.config/i3/config
@@ -232,7 +232,7 @@ exec_always --no-startup-id dunst
 # Assign Program To Workspace
 #for_window [class="Brave-browser"] move to workspace $ws2
 #for_window [class="discord"] move to workspace $ws3
-for_window [class="Pycalendar.py"] floating enable move to position 1418px 38px
+for_window [class="Pycalendar.py"] floating enable move to position 1415px 38px
 
 # Print Screen
 # Scrot
@@ -256,7 +256,11 @@ bindsym $mod+x exec betterlockscreen -l dim
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 1 # increase screen brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 1 # decrease screen brightness
 
-# Keybinding for network manager
-bindsym $mod+n exec --no-startup-id nm-connection-editor
+# Wifi hotspot
+bindsym --release $mod+n exec wihotspot 
+for_window [class="Wihotspot-gui"] floating enable 
 
 
+# Blueman
+bindsym --release $mod+m exec blueman-manager
+for_window [class="Blueman-manager"] floating enable resize set 30ppt 40ppt
