--- a/.config/polybar/modules/gmail.ini
+++ b/.config/polybar/modules/gmail.ini
@@ -10,6 +10,7 @@ format-suffix-foreground = ${colors.purple}
 [module/gmail-sontungexpt]
 inherit = module/gmail
 ; format-prefix = "SonTung: "
+click-left = xdg-open https://mail.google.com/mail/u/0/#inbox
 format-suffix = " SonTung"
 exec = ~/.config/polybar/gmail/launch.py -cr ~/.config/polybar/gmail/authenticates/sontungexpt.json -c '#ee39b9'
 
@@ -18,4 +19,5 @@ exec = ~/.config/polybar/gmail/launch.py -cr ~/.config/polybar/gmail/authenticat
 inherit = module/gmail
 ; format-prefix = "Uit: "
 format-suffix = " Uit"
+click-left = xdg-open https://mail.google.com/mail/u/1/#inbox
 exec = ~/.config/polybar/gmail/launch.py -cr ~/.config/polybar/gmail/authenticates/school.json -c '#ee39b9'
