--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -90,23 +90,26 @@ map ctrl+shift+u discard_event
 map ctrl+shift+f11 discard_event
 map ctrl+shift+f1 discard_event
 map ctrl+shift+l discard_event
+map ctrl+shift+minus discard_event
 
-
-
-# Mapping
+# Mappings
 # Change opacity
 map alt+f10 a set_background_opacity +0.1
 map alt+f9 set_background_opacity -0.1
 
 # Resize font sizes
-map ctrl+shift+equal change_font_size all +1.0
-map ctrl+shift+plus change_font_size all +1.0
-map ctrl+shift+kp_add change_font_size all +1.0
+#map ctrl+shift+equal change_font_size all +1.0
+#map ctrl+shift+plus change_font_size all +1.0
+#map ctrl+shift+kp_add change_font_size all +1.0
 map ctrl+equal change_font_size all +1.0
 
-map ctrl+shift+minus change_font_size all -1.0
+#map ctrl+shift+minus change_font_size all -1.0
 map ctrl+minus change_font_size all -1.0
-map ctrl+shift+kp_subtract change_font_size all -1.0
+#map ctrl+shift+kp_subtract change_font_size all -1.0
+
+# Reset font size to default
+map ctrl+shift+equal set_font_size 17.0
+map ctrl+shift+minus set_font_size 17.0
 
 # Scrolling
 map ctrl+up scroll_line_up
