--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -6,10 +6,10 @@
 # !/home/stilux/.zsh_history_fix
 # !/home/stilux/.fehbg
 
-**/githup-copilot/hosts.json
+**/github-copilot/hosts.json
 **/node_modules/
-**/githup-copilot/
-**/githup-copilot/*
+**/github-copilot/
+**/github-copilot/*
 yay/
 bspwm/
 teams/
