Small neovim update

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,6 +1,9 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
+
+# Colors for custom colorblocks
+Old Config
     info title
     info underline
 
