update kitty, neovim

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -62,24 +62,27 @@ window_resize_step_lines 1
 confirm_os_window_close -1
 
 tab_bar_edge top
-tab_bar_margin_width 0.0
+tab_bar_margin_width 1.0
 tab_bar_margin_height 0.0 0.0
-tab_bar_style powerline
+tab_bar_style separator
+# tab_separator ' ▍'
+tab_separator ' ▏'
 tab_bar_align left
 tab_bar_margin_color none
 
-active_tab_foreground  #b04070
-active_tab_background #85f082
+# active_tab_foreground #8b7cd6
+active_tab_foreground #7169d1
+active_tab_background #2a3048
 active_tab_font_style   bold-italic
-inactive_tab_foreground #ffffff
-inactive_tab_background #21927c
+inactive_tab_foreground #495266
+inactive_tab_background #282e46
 # inactive_tab_background #362b48
 inactive_tab_font_style normal
 
 # Remove default mappings
 map ctrl+shift+n discard_event
 map ctrl+shift+r discard_event
-map ctrl+shift+f6 discard_event 
+map ctrl+shift+f6 discard_event
 map ctrl+alt+a discard_event
 map ctrl+shift+delete discard_event
 map ctrl+shift+a>1 discard_event
@@ -90,6 +93,7 @@ map ctrl+shift+u discard_event
 map ctrl+shift+f11 discard_event
 map ctrl+shift+f1 discard_event
 map ctrl+shift+l discard_event
+map ctrl+shift+t discard_event
 map ctrl+shift+minus discard_event
 
 # Mappings
