update kitty, neovim

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -62,17 +62,17 @@ window_resize_step_lines 1
 confirm_os_window_close -1
 
 tab_bar_edge top
-tab_bar_margin_width 1.0
-tab_bar_margin_height 0.0 0.0
+tab_bar_margin_width 0.0
+tab_bar_margin_height 0.0 1.0
 tab_bar_style separator
 # tab_separator ' ▍'
 tab_separator ' ▏'
 tab_bar_align left
-tab_bar_margin_color none
+tab_bar_margin_color #57536e
 
 # active_tab_foreground #8b7cd6
 active_tab_foreground #7169d1
-active_tab_background #2a3048
+active_tab_background #262b40
 active_tab_font_style   bold-italic
 inactive_tab_foreground #495266
 inactive_tab_background #282e46
