--- a/.config/polybar/modules/volume.ini
+++ b/.config/polybar/modules/volume.ini
@@ -11,6 +11,7 @@ ramp-volume-6 ="墳 "
 ramp-volume-7 ="墳 "
 ramp-volume-8 ="墳 "
 ramp-volume-9 ="墳 "
+ramp-volume-10 ="墳 "
 
 ramp-volume-0-foreground = ${colors.green}
 ramp-volume-1-foreground = ${colors.green}
