--- a/.config/polybar/modules/light-screen.ini
+++ b/.config/polybar/modules/light-screen.ini
@@ -8,6 +8,7 @@ scroll-down = exec light -U 1
 
 format-prefix = " "
 format-prefix-foreground = ${colors.yellow}
+format-prefix-font = 0
 
 label = "%output%%"
 label-font = 1
