--- a/.config/polybar/modules/system.ini
+++ b/.config/polybar/modules/system.ini
@@ -2,10 +2,10 @@
 type = internal/memory
 interval = 3
 
-label = " %percentage_used:2%%"
+label = "  %percentage_used:2%%"
 
-format-prefix-padding = 2
-format-prefix-font = 2
+format-prefix-padding = 1
+format-prefix-font = 0
 format-prefix-foreground = #ffffff
 format-background = ${colors.surface0}
 format-foreground = ${colors.red}
@@ -16,7 +16,7 @@ type = internal/cpu
 
 interval = 1
 format = <label>
-label = " %percentage%%"
+label = "󰍛 %percentage%%"
 
 format-background = ${colors.surface0}
 format-foreground = ${colors.peach}
@@ -79,8 +79,7 @@ type = custom/script
 exec = uname -r
 interval = 10000
 label = "%output%"
-; format-prefix = "  "
-format-prefix = "ﮧ  "
+format-prefix = "  "
 format-background = ${colors.surface0}
 format-foreground = ${colors.pink-custom}
 format-font = 1
@@ -94,5 +93,5 @@ label = "%output%"
 format-prefix= "  "
 format-background = ${colors.surface0}
 format-foreground = ${colors.teal}
-format-font = 1
+format-font = 0
 
