--- a/.config/polybar/modules/volume.ini
+++ b/.config/polybar/modules/volume.ini
@@ -5,13 +5,13 @@ ramp-volume-0 =" "
 ramp-volume-1 =" "
 ramp-volume-2 =" "
 ramp-volume-3 =" "
-ramp-volume-4 ="墳 "
-ramp-volume-5 ="墳 "
-ramp-volume-6 ="墳 "
-ramp-volume-7 ="墳 "
-ramp-volume-8 ="墳 "
-ramp-volume-9 ="墳 "
-ramp-volume-10 ="墳 "
+ramp-volume-4 ="󰕾 "
+ramp-volume-5 ="󰕾 "
+ramp-volume-6 ="󰕾 "
+ramp-volume-7 ="󰕾 "
+ramp-volume-8 ="󰕾 "
+ramp-volume-9 ="󰕾 "
+ramp-volume-10 ="󰕾 "
 
 ramp-volume-0-foreground = ${colors.green}
 ramp-volume-1-foreground = ${colors.green}
@@ -32,7 +32,7 @@ format-muted = <label-muted>
 format-muted-background = ${colors.surface0}
 format-muted-foreground = ${colors.text}
 
-label-muted =" "
+label-muted ="󰝟 "
 label-volume = %percentage%%
 label-volume-foreground = ${colors.text}
 click-right = pavucontrol
@@ -40,12 +40,12 @@ click-right = pavucontrol
 bar-volume-width = 11
 bar-volume-gradient = false
 
-bar-volume-indicator = 雷
-bar-volume-indicator-font = 100
+bar-volume-indicator = 󰑊
+bar-volume-indicator-font = 0
 bar-volume-indicator-foreground = ${colors.white}
 
-bar-volume-fill = 絛
-bar-volume-fill-font = 100
+bar-volume-fill = 󰅹
+bar-volume-fill-font = 0
 
 bar-volume-foreground-0 = ${colors.green}
 bar-volume-foreground-1 = ${colors.green}
@@ -59,8 +59,8 @@ bar-volume-foreground-8 = ${colors.red}
 bar-volume-foreground-9 = ${colors.red}
 bar-volume-foreground-10 = ${colors.red}
 
-bar-volume-empty = 絛
-bar-volume-empty-font = 100
+bar-volume-empty = 󰅹
+bar-volume-empty-font = 0
 bar-volume-empty-foreground = ${colors.overlay2}
 
 
