--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -2,17 +2,17 @@
 type = internal/date
 interval = 1
 
-; date = 﨟 %A, %d %B %Y%
-; date = "﨟 %A, %b %d -"
-date = 﨟 %{A1: .config/polybar/scripts/polybar-calendar/calendar.sh:}%A, %d %B %Y%{A}
-; date = 﨟 %{A1: .config/polybar/scripts/calendar curr:}%A, %d %B %Y%{A}
-;date-alt = "﨟 %A, %b %d -"
+; date =   %A, %d %B %Y%
+; date = "  %A, %b %d -"
+date = "  %{A1: .config/polybar/scripts/polybar-calendar/calendar.sh:}%A, %d %B %Y%{A}"
+; date =   %{A1: .config/polybar/scripts/calendar curr:}%A, %d %B %Y%{A}
+;date-alt = "  %A, %b %d -"
 
 ;time-alt = " %I:%M %p "
 time = " %H:%M"
 ; format-prefix = ""
 format-prefix-padding = 1
-format-prefix-font = 1
+format-prefix-font = 0
 format-prefix-foreground = #ffffff
 format-background = ${colors.surface0}
 ; format-foreground = ${colors.blue}
