--- a/.config/i3/config
+++ b/.config/i3/config
@@ -208,6 +208,10 @@ gaps outer 2
 # User config
 ############################################################
 
+# Scratchpad
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus  scratchpad show
+
 # Ibus
 # Auto start ibus
 exec_always --no-startup-id ibus-daemon -drx
@@ -275,7 +279,8 @@ bindsym $mod+x exec betterlockscreen -l dim
 
 # Open edge browser
 # bindsym $mod+b exec microsoft-edge-stable
-bindsym $mod+b exec firefox
+bindsym $mod+b exec xdg-open https://mail.google.com/
+
 # Keybinding for light screen
 # Increase screen brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 1
@@ -311,11 +316,11 @@ for_window [class="Blueman-manager"] move to position center
 
 
 # Open github website
-bindsym --release $mod+g exec firefox https://github.com
+bindsym --release $mod+g exec xdg-open https://github.com
 
 # Open UIT website
-bindsym --release $mod+u exec firefox https://courses.uit.edu.vn/
-bindsym --release $mod+shift+u exec firefox https://daa.uit.edu.vn/
+bindsym --release $mod+u exec xdg-open https://courses.uit.edu.vn/
+bindsym --release $mod+shift+u exec xdg-open https://daa.uit.edu.vn/
 
 # Emulator
 for_window [title="Android Emulator -*"] resize set 547
@@ -364,7 +369,7 @@ for_window [class="Lxappearance"] move to position center
 for_window [class="Pycalendar.py"] floating enable move to position 1399px 38px
 
 # Chat Gpt
-bindsym --release $mod+c exec firefox https://voicegpt.us/chatgpt
+bindsym --release $mod+c exec xdg-open https://voicegpt.us/chatgpt
 
 # Virtual Manager
 for_window [class="Virt-manager"] floating enable
