--- a/.config/polybar/modules/system.ini
+++ b/.config/polybar/modules/system.ini
@@ -4,6 +4,7 @@ interval = 3
 
 label = "  %percentage_used:2%%"
 
+format-prefix-padding = 1
 format-prefix-font = 0
 format-prefix-foreground = #ffffff
 format-background = ${colors.surface0}
@@ -27,26 +28,17 @@ warn-foreground = ${colors.red}
 
 [module/filesystem]
 type = internal/fs
-
 interval = 10
-
 fixed-values = true
-
 spacing = 0
-
 format-mounted = <label-mounted>
-
 format-unmounted = <label-unmounted>
-
 label-mounted = " %percentage_used%%"
-
 label-unmounted = %mountpoint%: not mounted
 label-unmounted-foreground = #55
 label-unmounted-background = ${colors.surface0}
-
 label-mounted-background = ${colors.surface0}
 label-mounted-foreground = ${colors.blue}
-
 warn-percentage = 75
 warn-foreground = ${colors.red}
 warn-background = ${colors.surface0}
@@ -78,6 +70,7 @@ type = custom/script
 exec = uname -r
 interval = 10000
 label = "%output%"
+click-left = xdg-open https://github.com/sontungexpt/stilux-dotfiles
 format-prefix = "  "
 format-background = ${colors.surface0}
 format-foreground = ${colors.pink-custom}
