chore: update config

--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -2,6 +2,10 @@
 type = custom/script
 exec = ~/.config/polybar/scripts/checknetwork.sh
 interval = 3
+
+click-left =  kitty -e nmtui
+click-right = wihotspot
+
 label = "%output%"
 format-background = ${colors.surface0}
 format-foreground = ${colors.pink-custom}
