--- a/.config/polybar/modules/system.ini
+++ b/.config/polybar/modules/system.ini
@@ -68,9 +68,10 @@ click-left = ~/.config/polybar/scripts/powermenu.sh
 [module/kernel-name]
 type = custom/script
 exec = uname -r
-interval = 10000
+interval = 30
 label = "%output%"
 click-left = xdg-open https://github.com/sontungexpt/stilux-dotfiles
+click-right = xdg-open https://github.com/sontungexpt/neovim-config
 format-prefix = "  "
 format-background = ${colors.surface0}
 format-foreground = ${colors.pink-custom}
@@ -80,7 +81,7 @@ format-font = 1
 [module/packages-count]
 type = custom/script
 exec = pacman -Q | wc -l
-interval = 3
+interval = 5
 label = "%output%"
 format-prefix= "  "
 format-background = ${colors.surface0}
