refractor: move packages-count to new module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -50,7 +50,7 @@ font-14 = "Font Awesome 5 Free Solid:pixelsize=14;0"
 
 ; MODULES SETUP
 ;modules-left = appmenu space line space start cspace kernel-name double-cspace packages-count cspace end space start cspace gmail-sontungexpt cspace double-cspace gmail-school cspace end space start volume end
-modules-left = appmenu space line space workspaces space line space start cspace kernel-name double-cspace packages-count double-cspace end space start cspace network cspace end space start volume end
+modules-left = appmenu space line space workspaces space line space start cspace kernel-name double-cspace packages-count cspace end space start cspace network cspace end space start volume end
 # modules-center =
 modules-right = start cspace backlight double-cspace fs-root double-cspace memory double-cspace cpu cspace end space start cspace date cspace end space start cspace battery cspace end
 
@@ -84,6 +84,7 @@ include-file = ~/.config/polybar/colors/colors.ini
 include-file = ~/.config/polybar/modules/workspaces.ini
 include-file = ~/.config/polybar/modules/i3.ini
 include-file = ~/.config/polybar/modules/network.ini
+include-file = ~/.config/polybar/modules/packages.ini
 
 screenchange-reload = true
 
