--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,11 +55,6 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 bindsym $mod+d exec --no-startup-id rofi -show drun
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -138,6 +133,8 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
+
+bindsym $mod+Tab workspace back_and_forth
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -244,7 +241,6 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # Auto Start Dunst
 exec_always --no-startup-id dunst
-
 
 # Assign programs to workspace
 # assign [class="firefox"] → number 2
@@ -385,7 +381,7 @@ for_window [class="Virt-manager" title="win10 on QEMU/KVM"] floating disable
 for_window [class="Virt-manager" title="RDPWindows on QEMU/KVM"] floating disable
 
 # xcolor
-bindsym --release $mod+Shift+c exec xcolor | xclip -selection clipboard
+bindsym --release $mod+Shift+c exec xcolor | xclip -selection clipboard && dunstify "Copied color to clipboard $(xclip -selection clipboard -o)" -a "xcolor"
 
 # live-server vscode
 bindsym --release $mod+Mod1+l exec xdg-open http://localhost:5500
