perl: improve scripts and config

--- a/.config/polybar/modules/packages.ini
+++ b/.config/polybar/modules/packages.ini
@@ -1,6 +1,7 @@
 [module/packages-count]
 type = custom/script
 exec = pacman -Q | wc -l
+click-left = dunstify "pacman: $(pacman -Qu | wc -l), yay: $([ -x "$(command -v yay)" ] && yay -Qu | wc -l)" -a "polybar-packages-count"
 interval = 5
 label = "%output%"
 format-prefix= "  "
