perl: improve check_network script for polybar config

--- a/.config/polybar/modules/system.ini
+++ b/.config/polybar/modules/system.ini
@@ -72,6 +72,7 @@ interval = 100000
 label = "%output%"
 click-left = xdg-open https://github.com/sontungexpt/stilux-dotfiles
 click-right = xdg-open https://github.com/sontungexpt/neovim-config
+click-middle = xdg-open https://github.com/sontungexpt
 format-prefix = "  "
 format-background = ${colors.surface0}
 format-foreground = ${colors.pink-custom}
