perl: update ldoc-custom scripts

--- a/.config/polybar/modules/packages.ini
+++ b/.config/polybar/modules/packages.ini
@@ -1,7 +1,8 @@
 [module/packages-count]
 type = custom/script
 exec = pacman -Q | wc -l
-click-left = dunstify "pacman: $(pacman -Qu | wc -l), yay: $([ -x "$(command -v yay)" ] && yay -Qu | wc -l)" -a "polybar-packages-count"
+click-left = dunstify "pacman: $(pacman -Qu | wc -l)" -a "polybar-pacman-packages-update-count"
+click-right = dunstify "yay: $([ -x "$(command -v yay)" ] && yay -Qu | wc -l)" -a "polybar-yay_packages-update-count"
 interval = 5
 label = "%output%"
 format-prefix= "  "
