--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -79,6 +79,7 @@ include-file = ~/.config/polybar/modules/system.ini
 include-file = ~/.config/polybar/modules/volume.ini
 include-file = ~/.config/polybar/modules/app-menu.ini
 include-file = ~/.config/polybar/modules/gmail.ini
+include-file = ~/.config/polybar/modules/ibus.ini
 include-file = ~/.config/polybar/modules/light-screen.ini
 include-file = ~/.config/polybar/colors/colors.ini
 include-file = ~/.config/polybar/modules/workspaces.ini
