--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,7 +11,6 @@ disable_ligatures never
 
 # Cursor
 cursor  #a7ccff
-# cursor #be3e57
 cursor_text_color #FFFFFF
 # cursor_shape block
 
@@ -47,7 +46,7 @@ touch_scroll_multiplier 1.0
 
 # Mouse
 mouse_hide_wait 0.0
-url_color #6c9bd0
+url_color #199eff
 url_style curly
 open_url_with default
 focus_follows_mouse yes
