--- a/.config/polybar/modules/system.ini
+++ b/.config/polybar/modules/system.ini
@@ -71,7 +71,7 @@ exec = uname -r
 interval = 100000
 label = "%output%"
 click-left = xdg-open https://github.com/sontungexpt/stilux-dotfiles
-click-right = xdg-open https://github.com/sontungexpt/neovim-config
+click-right = xdg-open https://github.com/sontungexpt/stinvim
 click-middle = xdg-open https://github.com/sontungexpt
 format-prefix = "  "
 format-background = ${colors.surface0}
