--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,6 +4,7 @@
 # Mod5 (e.g. "Alt_Gr" on german QWERTZ layout)
 
 set $mod Mod4
+set $wallpaper ~/.config/wallpaper/wallpaper.png
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -23,7 +24,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -i $wallpaper --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -224,7 +225,6 @@ exec_always setxkbmap us
 exec_always xrandr --output eDP1 --mode 1920x1080
 
 # Display Wallpaper
-set $wallpaper ~/.config/wallpaper/wallpaper.jpg
 exec_always feh --bg-fill $wallpaper
 
 # Diasable title-bar
@@ -267,14 +267,8 @@ bindsym --release Print exec screenshot full
 # Flameshot
 bindsym --release $mod+Shift+f exec flameshot gui
 
-# BetterLockScreen
-exec_always --no-startup-id betterlockscreen -u $wallpaper
-# Set desktop background with custom effect
-exec --no-startup-id betterlockscreen -w dim
-# Alternative (set last used background)
-exec --no-startup-id source ~/.fehbg
-# KeyBinding For BetterLockScreen
-bindsym $mod+x exec betterlockscreen -l dim
+# Lock screen
+bindsym $mod+x exec i3lock -i $wallpaper
 
 # Open edge browser
 # bindsym $mod+b exec microsoft-edge-stable
