--- a/.config/i3/config
+++ b/.config/i3/config
@@ -24,7 +24,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -i $wallpaper --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -e -t -i $wallpaper --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -268,7 +268,7 @@ bindsym --release Print exec screenshot full
 bindsym --release $mod+Shift+f exec flameshot gui
 
 # Lock screen
-bindsym $mod+x exec i3lock -i $wallpaper
+bindsym $mod+x exec i3lock -e -t -i $wallpaper
 
 # Open edge browser
 # bindsym $mod+b exec microsoft-edge-stable
