--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,7 +4,6 @@
 # Mod5 (e.g. "Alt_Gr" on german QWERTZ layout)
 
 set $mod Mod4
-set $wallpaper $HOME/Pictures/Wallpapers/wallpaper1.jpg
 set $altwallpaper ${XDG_CONFIG_HOME:-$HOME/.config}/wallpaper/wallpaper.png
 set $lockscreen ${XDG_DATA_HOME:-$HOME/.local/share}/$USER/wallpaper/lockscreen.png
 
@@ -26,7 +25,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -e -t -i $wallpaper --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -e -t -i $lockscreen --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -227,7 +226,7 @@ exec_always setxkbmap us
 exec_always xrandr --output eDP1 --mode 1920x1080
 
 # Display Wallpaper
-exec --no-startup-id which setbg >> /dev/null 2>&1 && exec setbg $wallpaper
+exec --no-startup-id which setbg >> /dev/null 2>&1 && exec setbg "default" --no-fehbg &
 exec_always --no-startup-id which setbg >> /dev/null 2>&1 || exec_always --no-startup-id feh --bg-fill $wallpaper
 
 # Diasable title-bar
